MaxMetaspaceSize for JDK 8